<resources>
    <string name="app_name">Sipas Lumajang</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Logo">Logo</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="hint_username">Nama</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="oke">OK</string>
    <string name="lanjut">Lanjutkan</string>
    <string name="copyright">copyright 2015 SDP Android by Patpat Corp.</string>
    <string name="nama">Nama</string>
    <string name="shift">Shift</string>
    <string name="status">Status</string>
    <string name="kosong">Kosong</string>
    <string name="kamar">Kamar</string>
    <string name="isi">Penghuni</string>
    <string name="blok_a">Blok A</string>
    <string name="blok_b">Blok B</string>
    <string name="wanita">Wanita</string>
    <string name="reguwanita">Regu Wanita</string>
    <string name="sel">Sel</string>
    <string name="jumlah">Jumlah</string>
    <string name="lock">Lock</string>
    <string name="regu1">Regu 1</string>
    <string name="regu2">Regu 2</string>
    <string name="regu3">Regu 3</string>
    <string name="regu4">Regu 4</string>
    <string name="divider">:</string>
    <string name="orang">orang</string>
    <string name="total">Total</string>
    <string name="jml">jml</string>
    <string name="hadir">Hadir</string>
    <string name="tdk_hadir">Tidak Hadir</string>
    <string name="pagi">Shift Pagi</string>
    <string name="siang">Shift Siang</string>
    <string name="malam">Shift Malam</string>
    <string name="veri">Verifikasi?</string>
</resources>
