<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@color/colorSplashBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:padding="@dimen/frame">


<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSplashBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selamat_datang"
        android:textColor="#fff"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView4"
            android:textColor="#fff"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorYellow"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal"
            android:textColor="@color/colorYellow"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker_kepala"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <Button
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:text="@string/lanjut"
        android:background="@drawable/rounded_button"
        android:id="@+id/kepala_date"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:onClick="submitTanggal_1"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="31dp"/>


</LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:background="@color/colorYellow"
            android:textSize="12sp"
            android:layout_margin="@dimen/frame"
            />
    </LinearLayout>
</ScrollView>