<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/frame"
        android:background="@color/colorBackground"
        android:fadingEdge="horizontal"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorYellow">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/aatas"
           />
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorBackground"
                android:text="Portal Masuk"
                android:layout_margin="@dimen/frame"/>
        </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <!--TextView android:text="@string/Login" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:textSize="50sp"
            android:id="@+id/textView"
            android:textColor="@color/colorYellow"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170sp"
            android:contentDescription="@string/Logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40sp"
            android:src="@drawable/logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="@color/colorBackground">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorYellow">

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:hint="@string/hint_username"
                android:textColor="@color/colorYellow"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorYellow"
            android:lines="@color/colorYellow"
            >

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/hint_password"

                android:textColor="@color/colorYellow"
                android:lines="@color/colorYellow"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorBackground">

        <Button
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:text="@string/oke"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:id="@+id/okButton"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="41dp"
            android:onClick="loginPost" />
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:textSize="12sp"
            android:layout_margin="@dimen/frame"
            />
    </LinearLayout>
</ScrollView>


</android.support.design.widget.CoordinatorLayout>


