<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/frame"
    android:fillViewport="true"
    android:background="@color/colorSplashBackground">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorSplashBackground"
        android:orientation="vertical">

        <!--Tanggal-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorYellow"
            android:id="@+id/tgl_wanita"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="@dimen/frame"
            android:layout_marginTop="@dimen/frame"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorYellow"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="@dimen/frame"
            android:layout_gravity="center_horizontal"
            android:text="@string/reguwanita"
            android:textStyle="bold"
            android:textColor="@color/colorYellow"
            />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/frame">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nama"
                android:id="@+id/textView7"
                android:textColor="@color/colorYellow"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shift"
                android:id="@+id/textView8"
                android:textColor="@color/colorYellow"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/textView2"
                android:layout_toLeftOf="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/status"
                android:id="@+id/textView2"
                android:textColor="@color/colorYellow"
                android:layout_gravity="end"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorYellow"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ListView
            android:id="@+id/list_anggotaWanita"
            android:layout_width="fill_parent"
            android:layout_height="335dp"
            android:clickable="true"
            android:nestedScrollingEnabled="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="200sp"
                android:layout_height="30sp"
                android:text="@string/lock"
                android:id="@+id/lock_wnt"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/colorYellow"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ver_penjagaWanita"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorYellow"/>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:gravity="center"
            android:background="@color/colorYellow"
            android:textColor="@color/colorBackground"
            android:textSize="12sp"
            android:layout_margin="@dimen/frame"
            />

    </LinearLayout>

</ScrollView>