<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/frame"
    android:fillViewport="true"
    android:background="@color/colorSplashBackground">

    <!-- Main ListView
         Always give id value as list(@android:id/list)
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorYellow"
            android:id="@+id/tgl_anggota"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="@dimen/frame"
            android:layout_marginTop="@dimen/frame"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorYellow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="@dimen/frame"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorYellow"
        android:id="@+id/regugu" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nama"
            android:id="@+id/textView7"
            android:textColor="@color/colorYellow"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shift"
            android:id="@+id/textView8"
            android:textColor="@color/colorYellow"
            android:layout_marginRight="37dp"
            android:layout_marginEnd="37dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status"
            android:id="@+id/textView2"
            android:textColor="@color/colorYellow"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorYellow"/>

    <ListView
        android:id="@+id/list_anggota"
        android:layout_width="fill_parent"
        android:layout_height="335dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorYellow"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorSplashBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/ver_kamaranggota"
                android:textColor="@color/colorYellow"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_vertical_margin"/>
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:text="@string/copyright"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:background="@color/colorYellow"
            android:textSize="12sp"
            />
    </LinearLayout>
</ScrollView>